@@ -2,6 +2,10 @@ Version 2.1.3 - The "???" version
 ----------
 2006-??-??
 
+	GonoszTopi:
+		* Fixed windows compilation, that was still broken.
+		* Fixed locale bug. See http://forum.amule.org/thread.php?threadid=10178&sid=
+
 	ken:
 		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
 		  Mac.
